adjusted spacing b/w issue and contesting sections in index

--- a/style.css
+++ b/style.css
@@ -154,12 +154,12 @@ h3 {
 
 #issue {
   margin-top: 100px;
-  margin-bottom: 150px;
+  margin-bottom: 180px;
   padding-top: 25px;
 }
 
 #contesting {
-  margin-top: 150px;
+  margin-top: 180px;
 }
 
 /* * * INDEX IMG * * */
